--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-pandas==1.3.3
-numpy==1.21.2
-seaborn==0.11.2
-matplotlib==3.4.3
-imbalanced-learn==0.9.0
-scikit-learn==0.24.2
+pandas==2.2.2
+numpy==2.0.0
+seaborn==0.13.2
+matplotlib==3.9.2
+imbalanced-learn==0.12.3
+scikit-learn==1.5.1
+xgboost==2.1.1
